[gd_scene load_steps=6 format=3 uid="uid://ifklut0oxfq6"]

[ext_resource type="Script" path="res://FlipPanel/select_panel.gd" id="1_quenc"]
[ext_resource type="PackedScene" uid="uid://dq1tfxqw4xg81" path="res://FlipPanel/flip_panel.tscn" id="3_5r1na"]

[sub_resource type="Animation" id="Animation_l51pw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlipPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(317, 154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlipPanel2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(957, 152)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlipPanel3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1607, 154)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlipPanel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FlipPanel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlipPanel3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b8q5s"]
resource_name = "start_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlipPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(317, 354), Vector2(317, 154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlipPanel2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(957, 354), Vector2(957, 152)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlipPanel3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1607, 354), Vector2(1607, 154)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlipPanel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FlipPanel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlipPanel3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6sqg3"]
_data = {
"RESET": SubResource("Animation_l51pw"),
"start_anim": SubResource("Animation_b8q5s")
}

[node name="SelectPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_quenc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -276.0
offset_right = 1468.0
offset_bottom = 683.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)

[node name="FlipPanel" parent="." instance=ExtResource("3_5r1na")]
layout_mode = 1
offset_left = 317.0
offset_top = 154.0
offset_right = -335.0
offset_bottom = 206.0

[node name="FlipPanel2" parent="." instance=ExtResource("3_5r1na")]
layout_mode = 1
offset_left = 957.0
offset_top = 152.0
offset_right = 305.0
offset_bottom = 204.0
a = 1

[node name="FlipPanel3" parent="." instance=ExtResource("3_5r1na")]
layout_mode = 1
offset_left = 1607.0
offset_top = 154.0
offset_right = 955.0
offset_bottom = 206.0
a = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6sqg3")
}
autoplay = "start_anim"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-77, -200)
anchor_mode = 0
zoom = Vector2(0.445, 0.445)

[connection signal="burning" from="FlipPanel" to="." method="_on_flip_panel_burning"]
[connection signal="flip" from="FlipPanel" to="." method="_on_flip_panel_flip"]
[connection signal="burning" from="FlipPanel2" to="." method="_on_flip_panel_2_burning"]
[connection signal="flip" from="FlipPanel2" to="." method="_on_flip_panel_2_flip"]
[connection signal="burning" from="FlipPanel3" to="." method="_on_flip_panel_3_burning"]
[connection signal="flip" from="FlipPanel3" to="." method="_on_flip_panel_3_flip"]
